# pos

./: .cursorrules  .gitignore  .graphqlrc  .windsurfrules  DATABASE_ADAPTER_MIGRATION.md  IAM.md  LOGIN.md  MIGRATION_DIESEL_TO_SEAQUERY.md  README.md  SYNC.md  docker-compose.yml  drizzle.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  run-tauri-dev.sh  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: layout.tsx  (+1 more)
src-tauri/: ARCHITECTURE.md  Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lightning-macros/: Cargo.toml
src-tauri/crates/lightning-macros/src/: lib.rs
src-tauri/migrations/: 0000_wise_ultron.sql  0001_curious_mentallo.sql  0001_initial_schema.sql  0002_fix_foriegn_key.sql  0002_normal_karnak.sql  0003_required_sales_order_fields.sql  README.md
src-tauri/migrations/2025-01-14-043805_create_catalog_tables/: down.sql  up.sql
src-tauri/migrations/2025-02-22-055138_add_total_amount_to_sales_order_items/: down.sql  up.sql
src-tauri/migrations/2025-03-28-220421_create_suppliers_table/: up.sql
src-tauri/migrations/2025-03-28-224307_create_expenses_table/: up.sql
src-tauri/migrations/2025-03-29-130000_create_purchase_categories_table/: down.sql  up.sql
src-tauri/migrations/2025-03-29-140000_update_expenses_with_category_id/: down.sql  up.sql
src-tauri/migrations/2025-03-30-072833_create_channels_table/: up.sql
src-tauri/migrations/2025-03-30-075431_create_brands_table/: up.sql
src-tauri/migrations/2025-03-30-124432_create_cost_centers_table/: down.sql  up.sql
src-tauri/migrations/2025-03-30-170809_add_cost_center_id_to_sales_orders/: down.sql  up.sql
src-tauri/migrations/2025-03-30-170825_make_item_id_optional_in_sales_order_items/: down.sql  up.sql
src-tauri/migrations/2025-03-30-180046_create_payment_methods_table/: down.sql  up.sql
src-tauri/migrations/2025-03-30-180122_create_sales_order_payments_table/: down.sql  up.sql
src-tauri/migrations/2025-03-31-000001_add_cost_center_id_to_expenses/: down.sql  up.sql
src-tauri/migrations/2025-03-31-070653_add_sales_order_payments/: down.sql  up.sql
src-tauri/migrations/2025-03-31-070755_add_state_to_sales_order_payments/: down.sql  up.sql
src-tauri/migrations/2025-03-31-164428_consolidate_initial_schema/: up.sql
src-tauri/migrations/2025-03-31-172003_add_discounts_table/: down.sql  up.sql
src-tauri/migrations/2025-04-02-090109_create_sales_charge_types/: down.sql  up.sql
src-tauri/migrations/2025-04-02-090200_update_sales_orders_schema/: down.sql  up.sql
src-tauri/migrations/2025-04-02-090333_update_sales_order_items_schema/: down.sql  up.sql
src-tauri/migrations/2025-04-02-090707_create_sales_order_charges/: down.sql  up.sql
src-tauri/migrations/2025-04-02-090713_add_tax_groups/: up.sql
src-tauri/migrations/2025-04-07-170430_add_item_variants/: down.sql  up.sql
src-tauri/migrations/2025-04-08-054637_update_discounts_to_snake_case/: down.sql  up.sql
src-tauri/migrations/2025-04-08-054701_create_item_discounts/: down.sql  up.sql
src-tauri/migrations/2025-04-10-000000_consolidated_schema/: down.sql  up.sql
src-tauri/migrations/2025-04-12-165429_fix_foreign_key_constraints/: down.sql
src-tauri/migrations/2025-04-12-170507_make_sales_order_user_fields_required/: down.sql
src-tauri/migrations/2025-05-01-000000_add_tax_groups/: down.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src-tauri/src/: error.rs  lib.rs  main.rs  schema.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/graphql/: README.md  mod.rs  mutations.rs  queries.rs
src-tauri/src/adapters/incoming/: tauri.rs
src-tauri/src/adapters/outgoing/: graphql.rs
src-tauri/src/app/catalog/: catalog_service.rs  mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/app/: app_service.rs  catalog_service.rs  mod.rs
src-tauri/src/core/command/: app_service.rs  mod.rs
src-tauri/src/core/commands/: app_service.rs  mod.rs  sync_service.rs
src-tauri/src/core/common/: interface.rs  mod.rs  queries.rs  repository.rs
src-tauri/src/core/db/: migrations.rs  mod.rs  sea_query_crud.rs
src-tauri/src/core/entities/: mod.rs
src-tauri/src/core/models/: README.md  mod.rs
src-tauri/src/core/repositories/: user_repository.rs
src-tauri/src/test/: mocks.rs
(+500 files in other folders)
