[package]
name = "lightning_pos"
version = "0.1.0"
description = "A Tauri App"
authors = ["MinnalHQ <team@minnal.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lightning_pos"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
modql = { version = "0.4.1", features = ["with-sea-query"] }
sea-query = "0.32.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std", "sqlite"] }
tauri = { version = "2.0.2", features = [] }
tauri-plugin-sql = { version = "2.0.1", features = ["sqlite"] }
tauri-plugin-fs = "2.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
