[package]
name = "lightning_pos"
version = "0.1.0"
description = "A Tauri App"
authors = ["MinnalHQ <team@minnal.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lightning_pos"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
diesel = { version = "2.2.6", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "uuid",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
juniper = { version = "0.16.1", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tauri = { version = "2.2.2", features = [] }
tauri-plugin-fs = "2.0.1"
uuid = { version = "1.11.1", features = ["v7"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
