[workspace]
members = [".", "crates/lightning-macros"]

[package]
name = "lightning_pos"
version = "0.1.0"
description = "A Tauri App"
authors = ["MinnalHQ <team@minnal.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lightning_pos"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
lightning-macros = { path = "crates/lightning-macros" }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "from", "from_str"] }
juniper = { version = "0.16.1", features = [
    "chrono",
    "uuid",
    "schema-language",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tauri = { version = "2.2.2", features = [] }
tauri-plugin-fs = "2.0.1"
uuid = { version = "1.11.1", features = ["v7"] }
rand = "0.8"
libsql = { version = "0.9.3" }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.4", features = ["sqlite", "runtime-tokio"] }
sea-query = { version = "0.32.3", features = [
    "with-uuid",
    "with-chrono",
    "thread-safe",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
